[package]
name = "benchmarks"
version = "0.1.0"
authors.workspace = true
categories.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]

[dev-dependencies]
anyhow = { workspace = true }
async-nats = { workspace = true, features = ["ring"] }
criterion = { workspace = true, features = ["cargo_bench_support", "async_tokio", "html_reports"] }
futures = { workspace = true }
nkeys = { workspace = true }
reqwest = { workspace = true, features = ["json", "rustls-tls"] }
tempfile = { workspace = true }
test-components = { workspace = true }
testcontainers = { workspace = true }
tokio = { workspace = true, features = ["time"] }
tokio-stream = { workspace = true }
url = { workspace = true }
wasmcloud-control-interface = { workspace = true }
wasmcloud-test-util = { workspace = true }
wasmcloud-core = { workspace = true, features = [
    "reqwest",
    "rustls-native-certs",
] }

[[bench]]
name = "benchmarks"
harness = false

